# lsdd

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_rag.py
core/: __init__.py  api_client.py  chains.py  utils.py
docs/: spec.md
requirements/: requirements.md
test/: docker-compose.yml
test/docs/: spec.md  tasks.md
test/requirements/: requirements.md
