[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdd"
version = "0.1.0"
description = "Light Spec Driven Development (LSDD)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "requests",
    "click",
    "python-dotenv"
]

[project.scripts]
lsdd = "main:cli"

[tool.setuptools]
py-modules = ["main"]
packages = ["core"]
